tests-integration/tests/roundtrip/invalid/semantic/comprehension_issue/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/comprehension_issue/01/input.essence:4:28:
  |
4 | such that and([true | b <- blocks])
  |                            ^^^^^^
Error: Expression of type member blocks of record {blocks : function int --> int} cannot be projected in a comprehension

